--- a/UWP-Music-Library/MainPage.xaml
+++ b/UWP-Music-Library/MainPage.xaml
@@ -66,8 +66,7 @@
             <SplitView.Pane>
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="0"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
@@ -101,11 +100,7 @@
                                 Click="YourLibrary_Click"/>
                             <TextBlock Text="Your Library" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
-                    </ListView>
 
-                    <TextBlock Text="PLAYLISTS" Grid.Row="1" FontSize="24"  VerticalAlignment="Center"/>
-
-                    <ListView Name="AppFunctionalitiesBottom" Grid.Row="2">
                         <StackPanel Orientation="Horizontal">
                             <Button Name="CreatePlaylist"
                                 FontFamily="Segoe MDL2 Assets"
@@ -125,47 +120,11 @@
                                 Click="LikedSongs_Click" />
                             <TextBlock Text="Liked Songs" FontSize="20" VerticalAlignment="Center"/>
                         </StackPanel>
+                    </ListView>
 
-                        <!-- The below buttons test adding and loading songs to/from a local path file-->
-                        <Button Name ="Test3" Content="Test Add Song" Height="30" Width="200" Click="Test3_Click"/>
-                        <Button Name ="Test4" Content="Test Load Song" Height="30" Width="200" Click="Test4_Click"/>
-
-                        <Button Name ="addSongButton" Content="Add Song" Height="30" Width="200" Click="addSongButton_Click">
-                            <Button.Flyout>
-                                <Flyout x:Name="addSongFlyout"  Placement="Right">
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                        </Grid.RowDefinitions>
-                                        
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBox Name="SongFileTextBox" PlaceholderText="Enter song .mp3 file location here."/>
-                                            <Button Name ="findSongFile" Content="Select Song File" Click="findSongFile_Click" />
-                                        </StackPanel>
-
-                                        <StackPanel Orientation="Horizontal" Grid.Row="1">
-                                            <TextBox Name="AlbumFileTextBox" PlaceholderText="Enter album .jpg file location here."/>
-                                            <Button Name ="findAlbumImageFile" Content="Select Album Image File" Click="findAlbumImageFile_Click"/>
-                                        </StackPanel>
-                                        
-                                        
-                                        <TextBox PlaceholderText="Enter song name here." Grid.Row="2"/>
-                                        <TextBox PlaceholderText="Enter song artist here." Grid.Row="3"/>
-                                        <TextBox PlaceholderText="Enter song album here." Grid.Row="4"/>
-
-                                        <Button Name ="saveNewSong" Content="Save" Click="saveNewSong_Click" Grid.Row="5" HorizontalAlignment="Left"/>
-                                        <Button Name ="cancelSave" Content="Cancel" Click="cancelSave_Click" Grid.Row="5" HorizontalAlignment="Right" />
-                                    </Grid>                                    
-                                </Flyout>
-                            </Button.Flyout>
-                        </Button> 
-
-                        <Button Click="Home_Click" Height="Auto" Width="Auto">
+                    <ListView Name="AppFunctionalitiesBottom" Grid.Row="1">                      
+                        
+                        <Button Click="Home_Click" Height="Auto" Width="Auto" Margin="0,10,0,0">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE80F;" FontSize="18" VerticalAlignment="Center"/>
                                 <TextBlock Text="  Home" FontSize="18" VerticalAlignment="Center"/>
@@ -206,9 +165,7 @@
                     <Button Name ="Artist_Title" Grid.Column="2" Background="SteelBlue" Content="Artist" FontSize="20" HorizontalContentAlignment="Left" Height="40" Width="260" Click="SortByArtist_Click"/>
                     <Button Name ="Album_Title" Grid.Column="3" Background="SteelBlue" Content="Album" FontSize="20" HorizontalContentAlignment="Left" Height="40" Width="260" Click="SortByAlbum_Click"/>
 
-                   
-                                    
-                <ListView Name="MusicListView"
+                    <ListView Name="MusicListView"
                           Grid.Row="1"
                           Grid.ColumnSpan="4"
                           IsItemClickEnabled="True"   
@@ -264,7 +221,8 @@
                                         IsStopButtonVisible="True" IsStopEnabled="True"
                                         IsFastRewindButtonVisible="True" IsFastRewindEnabled="True"                                        
                                         IsNextTrackButtonVisible="True" IsPreviousTrackButtonVisible="True"
-                                        IsRepeatButtonVisible="True" IsRepeatEnabled="True"/>
+                                        IsRepeatButtonVisible="True" IsRepeatEnabled="True"
+                                        IsFullWindowButtonVisible="False"/>
             </MediaPlayerElement.TransportControls>
         </MediaPlayerElement>    
     </Grid>
