--- a/UWP-Music-Library/MainPage.xaml
+++ b/UWP-Music-Library/MainPage.xaml
@@ -124,14 +124,14 @@
 
                     <ListView Name="AppFunctionalitiesBottom" Grid.Row="1">                      
                         
-                        <Button Click="Home_Click" Height="Auto" Width="Auto" Margin="0,10,0,0">
+                        <Button Click="Home_Click" Height="Auto" Width="200" Margin="0,20,0,20" HorizontalAlignment="Center">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE80F;" FontSize="18" VerticalAlignment="Center"/>
                                 <TextBlock Text="  Home" FontSize="18" VerticalAlignment="Center"/>
                             </StackPanel>
                         </Button>
 
-                        <DropDownButton Height="Auto">
+                        <DropDownButton Height="Auto" Width="200" HorizontalAlignment="Center">
                             <TextBlock Text="Sort Songs By" FontSize="18"/>
                             <DropDownButton.Flyout>
                                 <MenuFlyout Placement="RightEdgeAlignedTop">
